--- a/templates/index.html
+++ b/templates/index.html
@@ -44,7 +44,9 @@
    		<div class="top-bar">
    			<a class="menu-toggle" href="#"><span>Menu</span></a>
 
-
+	   		<div class="logo">
+		         <a href="#intro">Arifoglu</a>
+		      </div>
 
 		   	<nav id="main-nav-wrap">
 					<ul class="main-navigation">
